[package]
name = "sofidu"
version = "0.1.0"
edition = "2021"
authors = ["LoipesMas"]
description = "An alternative to du, that lets you sort and filter the results"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.34.0"
colored = "2.0.0"
rayon = "1.5.1"
